5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1578_2897.log
== SUBMITION (2019-03-13 12:51:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.149016
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:51:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:"))

# Impressao do dobro do numero
print("num")
-- EXECUTION TIME:
0.148646
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
num
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
num
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:51:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:"))

# Impressao do dobro do numero
print("22")
-- EXECUTION TIME:
0.130768
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:51:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11:"))

# Impressao do dobro do numero
print("22")
-- EXECUTION TIME:
0.204745
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:52:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("21:"))

# Impressao do dobro do numero
print("22")
-- EXECUTION TIME:
0.205763
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:52:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("21:"))

# Impressao do dobro do numero
print("7")
-- EXECUTION TIME:
0.187201
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
7
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:53:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("21"))

# Impressao do dobro do numero
print("num")
-- EXECUTION TIME:
0.137482
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
num
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
num
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:53:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero"))

# Impressao do dobro do numero
print("num")
-- EXECUTION TIME:
0.168146
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
num
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
num
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:55:28) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero"))

# Impressao do dobro do numero
print("num")
-- EXECUTION TIME:
0.204021
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
num
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
num
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:55:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("10"))

# Impressao do dobro do numero
print("num")
-- EXECUTION TIME:
0.199995
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
num
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
num
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:56:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("10:"))

# Impressao do dobro do numero
print("num")
-- EXECUTION TIME:
0.165341
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
num
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
num
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:57:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:10"))

# Impressao do dobro do numero
print("num")
-- EXECUTION TIME:
0.269544
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
num
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
num
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:58:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:10"))

# Impressao do dobro do numero
print("10")
-- EXECUTION TIME:
0.174529
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
10
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:59:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:"))

# Impressao do dobro do numero
print(int(num))
-- EXECUTION TIME:
0.142182
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:59:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:"))

# Impressao do dobro do numero
print(int("num"))
-- EXECUTION TIME:
0.168806
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/2897/main.py", line 7, in <module>
    print(int("num"))
ValueError: invalid literal for int() with base 10: 'num'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:00:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:10"))

# Impressao do dobro do numero
print(int("20"))
-- EXECUTION TIME:
0.182939
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
20
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
20
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:00:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:10"))

# Impressao do dobro do numero
print("20")
-- EXECUTION TIME:
0.190585
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
20
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
20
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:00:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:8"))

# Impressao do dobro do numero
print("16")
-- EXECUTION TIME:
0.187275
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
16
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:01:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:8"))

# Impressao do dobro do numero
print("num")
-- EXECUTION TIME:
0.144466
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
num
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
num
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:01:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:8"))

# Impressao do dobro do numero
print(int(16)("num")
-- EXECUTION TIME:
0.149339
-- ERROR:
  File "/home/codebench/codes/1578/2897/main.py", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:01:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:8"))

# Impressao do dobro do numero
print(int(16)("num"))
-- EXECUTION TIME:
0.193598
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/2897/main.py", line 7, in <module>
    print(int(16)("num"))
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:01:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(int("num"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int("num"))
ValueError: invalid literal for int() with base 10: 'num'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:02:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print("num")
-- OUTPUT:
num
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:02:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print("num")
-- EXECUTION TIME:
0.155506
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
num
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
num
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:02:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print("num*2")
-- OUTPUT:
num*2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:05:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:05:27) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.14245
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:18:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.172262
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 00:45:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.161021
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 12:26:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.149886
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:55:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.218289
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
